src/objects/KS_Pedido__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para alojar los pedidos provinientes de SAP</description>
    <fields>
        <fullName>ID_OFERTA__c</fullName>
        <formula>KS_Oferta__r.KS_Oferta_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID-OFERTA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_clases_de_facturas__c</fullName>
        <label>Bloqueo de clases de facturas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_factura_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_nota_de_entrega__c</fullName>
        <label>Bloqueo de nota de entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_entrega_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribucion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clase_de_documento_de_ventas__c</fullName>
        <label>Clase de documento de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_documento_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clase_de_pedido_de_cliente__c</fullName>
        <label>Clase de pedido de cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_pedido_de_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Comisionista__c</fullName>
        <label>Comisionista</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Condicion_de_expedicion__c</fullName>
        <label>Condicion de expedición</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_expedicion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Dest_Factura__c</fullName>
        <label>Dest. Factura</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Destinatario__c</fullName>
        <label>Destinatario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Documento_de_ventas__c</fullName>
        <label>Documento de ventas</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Estado_de_pedido</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_creacion_registro_en_SAP__c</fullName>
        <label>Fecha creación registro en SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_del_pedido_de_compras_cliente__c</fullName>
        <label>Fecha del pedido de compras cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_preferente_de_entrega__c</fullName>
        <label>Fecha preferente de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Grupo_de_vendedores__c</fullName>
        <label>Grupo de vendedores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Grupo_de_vendedores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Hora_del_dia__c</fullName>
        <label>Hora del dia</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Hora_registrada__c</fullName>
        <label>Hora registrada</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Motivo_de_pedido__c</fullName>
        <label>Motivo de pedido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Motivo_de_pedido</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Nombre_de_usuario__c</fullName>
        <label>Nombre de usuario</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_del_responsable__c</fullName>
        <label>Nombre del responsable</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_Pedido__c</fullName>
        <description>ID SAP</description>
        <externalId>true</externalId>
        <label>Número Pedido</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Numero_Personal__c</fullName>
        <label>Número Personal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_pedido_del_cliente__c</fullName>
        <label>Número de pedido del cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_ticket_Attend__c</fullName>
        <label>Numero de ticket Attend</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>KSPedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oferta_CRM__c</fullName>
        <label>Oferta CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Oferta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>KSPedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oficina_de_ventas__c</fullName>
        <label>Oficina de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Oficinas_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Resp_Pago__c</fullName>
        <label>Resp. Pago</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitante</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Valor_neto_del_pedido__c</fullName>
        <label>Valor neto del pedido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Vendedor__c</fullName>
        <label>Vendedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_ID_Oferta__c</fullName>
        <label>ID-Oferta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Pedido</label>
    <listViews>
        <fullName>All</fullName>
        <columns>KS_Oficina_de_ventas__c</columns>
        <columns>NAME</columns>
        <columns>KS_Documento_de_ventas__c</columns>
        <columns>ID_OFERTA__c</columns>
        <columns>KS_Fecha_creacion_registro_en_SAP__c</columns>
        <columns>KS_Solicitante__c</columns>
        <columns>KS_Valor_neto_del_pedido__c</columns>
        <columns>KS_Estado__c</columns>
        <columns>KS_Numero_de_pedido_del_cliente__c</columns>
        <columns>KS_Numero_de_ticket_Attend__c</columns>
        <columns>KS_Fecha_del_pedido_de_compras_cliente__c</columns>
        <columns>KS_Fecha_preferente_de_entrega__c</columns>
        <columns>KS_Motivo_de_pedido__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_Hoy</fullName>
        <columns>KS_Oficina_de_ventas__c</columns>
        <columns>NAME</columns>
        <columns>KS_Documento_de_ventas__c</columns>
        <columns>ID_OFERTA__c</columns>
        <columns>KS_Bloqueo_de_nota_de_entrega__c</columns>
        <columns>KS_Solicitante__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>KS_Valor_neto_del_pedido__c</columns>
        <columns>KS_Fecha_creacion_registro_en_SAP__c</columns>
        <columns>KS_Fecha_del_pedido_de_compras_cliente__c</columns>
        <columns>KS_Motivo_de_pedido__c</columns>
        <columns>KS_Numero_de_ticket_Attend__c</columns>
        <columns>KS_Numero_de_pedido_del_cliente__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>KS_Fecha_creacion_registro_en_SAP__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Nuevos de Hoy</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_esta_semana</fullName>
        <columns>KS_Oficina_de_ventas__c</columns>
        <columns>NAME</columns>
        <columns>KS_Documento_de_ventas__c</columns>
        <columns>ID_OFERTA__c</columns>
        <columns>KS_Bloqueo_de_nota_de_entrega__c</columns>
        <columns>KS_Solicitante__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>KS_Valor_neto_del_pedido__c</columns>
        <columns>KS_Fecha_creacion_registro_en_SAP__c</columns>
        <columns>KS_Fecha_del_pedido_de_compras_cliente__c</columns>
        <columns>KS_Motivo_de_pedido__c</columns>
        <columns>KS_Numero_de_ticket_Attend__c</columns>
        <columns>KS_Numero_de_pedido_del_cliente__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>KS_Fecha_creacion_registro_en_SAP__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nuevos de esta semana</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Nuevos_de_este_Mes</fullName>
        <columns>KS_Oficina_de_ventas__c</columns>
        <columns>NAME</columns>
        <columns>KS_Documento_de_ventas__c</columns>
        <columns>ID_OFERTA__c</columns>
        <columns>KS_Bloqueo_de_nota_de_entrega__c</columns>
        <columns>KS_Solicitante__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>KS_Valor_neto_del_pedido__c</columns>
        <columns>KS_Fecha_creacion_registro_en_SAP__c</columns>
        <columns>KS_Fecha_del_pedido_de_compras_cliente__c</columns>
        <columns>KS_Motivo_de_pedido__c</columns>
        <columns>KS_Numero_de_ticket_Attend__c</columns>
        <columns>KS_Numero_de_pedido_del_cliente__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>KS_Oferta__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>KS_Fecha_creacion_registro_en_SAP__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Nuevos de este Mes</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Número SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>